--- a/public/chat.html
+++ b/public/chat.html
@@ -31,7 +31,7 @@
       <div class="message">
         <p>
           <span class="message__name">{{username}}</span>
-          <spanc class="message__meta">{{createdAt}}</span>
+          <span class="message__meta">{{createdAt}}</span>
         </p>
         <p>{{message}}</p>
       </div>
@@ -41,9 +41,9 @@
       <div>
         <p class="message">
           <span class="message__name">{{username}}</span>
-          <spanc class="message__meta">{{createdAt}}</span>
+          <span class="message__meta">{{createdAt}}</span>
         </p>
-        <p><a href={{url}} target="_blank">This is my location</a></p>
+        <img src={{url}}>
       </div>
     </script>
 
